<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/a_register_title_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_title_textView_text"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <TextView
                    android:id="@+id/a_register_name_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_name_textView_text" />

                <EditText
                    android:id="@+id/a_register_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="firstName"
                    android:ems="10"
                    android:hint="@string/a_register_name_editText_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/a_register_lastName_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_lastName_textView_text" />

                <EditText
                    android:id="@+id/a_register_lastName_editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="lastName"
                    android:ems="10"
                    android:hint="@string/a_register_lastName_editText_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/a_register_username_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_username_textView_text" />

                <EditText
                    android:id="@+id/a_register_username_editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="username"
                    android:ems="10"
                    android:hint="@string/a_register_username_editText_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/a_register_password_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_password_textView_text" />

                <EditText
                    android:id="@+id/a_register_password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/a_register_password_editText_hint"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/a_register_dateOfBirth_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_dateOfBirth_textView_text" />

                <EditText
                    android:id="@+id/a_register_dateOfBirth_editText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints="dateOfBirth"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/a_register_dateOfBirth_editText_hint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/a_register_gender_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a_register_gender_textView_text" />

                <RadioGroup
                    android:id="@+id/a_register_gender_radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/a_register_male_radioButton">

                    <RadioButton
                        android:id="@+id/a_register_male_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/a_register_male_radioButton_text" />

                    <RadioButton
                        android:id="@+id/a_register_female_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/a_register_female_radioButton_text" />
                </RadioGroup>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="32dp" />

                <Button
                    android:id="@+id/a_register_register_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fadingEdge="horizontal"
                    android:text="@string/a_register_register_button_text" />

                <Button
                    android:id="@+id/a_register_back_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/a_register_back_button_text" />

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>