<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:contentPadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/a_login_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_login_title_textView_text"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/a_login_username_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_login_username_textView_text" />

            <EditText
                android:id="@+id/a_login_username_editText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/a_login_username_editText_hint"
                android:inputType="text" />

            <TextView
                android:id="@+id/a_login_password_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_login_password_textView_text" />

            <EditText
                android:id="@+id/a_login_password_editText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/a_login_password_editText_hint"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/a_login_login_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/a_login_login_button_text" />

            <Button
                android:id="@+id/a_login_register_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fadingEdge="horizontal"
                android:text="@string/a_login_register_button_text" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>